<resources>

    <string name="app_name">@string/app_name_release</string>
    <string name="app_name_debug">Splash-DEBUG</string>
    <string name="app_name_release">Splash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="developed_by_title">Developed by</string>
    <string name="ar_email">amanshuraikwar.dev@gmail.com</string>
    <string name="developer_name">Amanshu Raikwar</string>
    <string name="developer_github_link">https://github.com/amanshuraikwar</string>

    <string name="connection_line_mask_hidden">M26,159 L26,159 L32,159 L32,159 Z</string>
    <string name="connection_line_mask_shown">M26,67 L26,159 L32,159 L32,67 Z</string>
    <string name="phone_button_frown">M23.6061137,207.020699 C23.6061137,207.020699 26.2397148,206 28.494994,206 C30.7502732,206 32.753258,207.020699 32.753258,207.020699</string>
    <string name="phone_button">M24,206.5 C24,206.5 27.6392462,206.449997 28,206.449997 C28.3607538,206.449997 32,206.5 32,206.5</string>
    <string name="retry_btn_text">retry</string>
    <string name="no_internet_connection_txt">no internet connection</string>
    <string name="downloading_text">Downloading</string>
    <string name="ok_btn_txt">OK</string>
    <string name="done_btn_txt">done</string>
    <string name="close_btn_txt">close</string>
    <string name="app_short_description">an unofficial unsplash client</string>
    <string name="third_party_libraries_title">Third party libraries used</string>

    <string name="transition_photo">photo</string>
    <string name="transition_photo_description_background">photo_description_background</string>
    <string name="transition_artist_pic">artist_pic</string>
    <string name="transition_photo_fullscreen">photo_fullscreen</string>
    <string name="transition_stats_button">stats_button</string>
    <string name="transition_stats_background">stats_background</string>
    <string name="content_error_text">Unable to load content!</string>
    <string name="unknown_location">Unknown location</string>
    <string name="empty_stat">--</string>

    <array name="tab_name">
        <item>photos</item>
        <item>collections</item>
        <item>search</item>
        <item>downloads</item>
        <item>favs</item>
    </array>
</resources>
