<?xml version="1.0" encoding="utf-8"?>

<com.commit451.elasticdragdismisslayout.ElasticDragDismissFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eddfl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="false"
    app:dragDismissDistance="174dp"
    app:dragDismissScale="0.95">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey1"
        android:transitionName="@string/transition_photo_description_background" />

    <com.sonu.app.splash.ui.widget.ParallaxScrimageView
        android:id="@+id/photoIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="168dp"
        android:foreground="@drawable/mid_grey_ripple"
        android:stateListAnimator="@animator/app_bar_pin"
        android:transitionName="@string/transition_photo"
        android:background="@color/grey1"
        app:scrimColor="@color/scrim"
        app:scrimAlpha="0"
        app:maxScrimAlpha="0.4"
        app:parallaxFactor="-0.5" />

    <FrameLayout
        android:id="@+id/toolbarWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="9dp">

        <ImageButton
            android:id="@+id/backIb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            style="@style/Widget.Splash.BorderlessImageButton.Light"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="no" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/itemsRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/photoInfoLoadingWrapperLl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical">

        <com.sonu.app.splash.ui.widget.FourThreeView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/view"
            android:background="@drawable/mid_grey_ripple" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/photoInfoPb"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="32dp"
                android:indeterminateTint="@color/inactiveIcon" />

            <Button
                android:id="@+id/photoInfoRetryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_replay_black_24dp"
                style="@style/Widget.Splash.Button"
                android:text="@string/retry_btn_text"
                tools:ignore="ContentDescription"
                android:visibility="invisible"/>
        </FrameLayout>
    </LinearLayout>

    <com.sonu.app.splash.ui.widget.FABToggle
        android:id="@+id/downloadFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:focusable="true"
        android:tint="@color/activeIconLight"
        android:src="@drawable/ic_file_download_black_24dp"
        app:fabSize="mini" />

    <com.sonu.app.splash.ui.widget.FABToggle
        android:id="@+id/addToFavFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="72dp"
        android:stateListAnimator="@animator/raise"
        android:tint="@color/activeIconLight"
        android:src="@drawable/bookmark_plus_outline_black_24dp"
        app:fabSize="mini" />
</com.commit451.elasticdragdismisslayout.ElasticDragDismissFrameLayout>
