<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.sonu.app.splash.ui.widget.WidthFitSquareLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Splash"
                    android:textAppearance="@android:style/TextAppearance.Material.Display3"
                    android:fontFeatureSettings="smcp"
                    android:textStyle="bold"
                    android:textColor="@color/coal"
                    android:letterSpacing="0.2"/>
            </LinearLayout>

            <TextView
                android:id="@+id/appDescTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="an unofficial unsplash client"
                android:textAppearance="@android:style/TextAppearance.Material.Caption"
                android:fontFeatureSettings="smcp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/projectGithubIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_github_grey_24dp"
            android:layout_gravity="bottom|end"
            android:padding="8dp"
            android:tint="@color/coal"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="ContentDescription" />
    </com.sonu.app.splash.ui.widget.WidthFitSquareLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/developed_by_title"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/myImageCv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/me"
                tools:ignore="ContentDescription" />
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/myImageCv"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_name"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:text="@string/ar_email"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/arLinkedinIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:layout_toStartOf="@+id/arGithubIv"
            android:src="@drawable/ic_linkedin_grey_24dp"
            android:layout_below="@+id/myImageCv"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/arGithubIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:padding="4dp"
            android:layout_toStartOf="@+id/arInstagramIv"
            android:src="@drawable/ic_github_grey_24dp"
            android:layout_below="@+id/myImageCv"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/arInstagramIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:src="@drawable/ic_instagram_grey_24dp"
            android:layout_below="@+id/myImageCv"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</LinearLayout>